--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,48 @@ If your plugin does not need CSS, delete this file.
         rgba(252, 70, 107, 1) 14%
     );
 }
+
+.gemini-err-message {
+    width: 100%;
+    padding: 1rem;
+    border-radius: 10px;
+    border-style: solid;
+    border-color: var(--background-modifier-border);
+    font-size: 0.85rem;
+    border-width: 1px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    background-color: var(--background-modifier-error);
+}
+
+.gemini-ripple {
+    width: 1rem;
+    height: 1rem;
+    display: inline-block;
+    position: relative;
+	margin-left: 10px;
+}
+.gemini-ripple::after,
+.gemini-ripple::before {
+    content: '';
+    box-sizing: border-box;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 50%;
+    border: 2px solid #fff;
+    position: absolute;
+    left: 0;
+    top: 3px;
+    animation: animloader 2s linear infinite;
+}
+
+@keyframes animloader {
+    0% {
+        transform: scale(0);
+        opacity: 1;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0;
+    }
+}
